--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Emma Smith</h1>
+    <div class="heading">
+    <img alt="me" src="A3522818-BB49-4456-8FEA-70314EBE07C9_4_5005_c.jpeg">
+<h1>Camdyn Reiss</h1>
+</div>
 <div class="button">
-    <h3>Mesage</h3>
+    <h3>Message</h3>
     <img alt="message" src="message.png">
 </div>
-<div class="About">
+<div class="about">
     <h1>About</h1>
     <ul>
         <li>Age:</li>
@@ -23,15 +26,18 @@
     </ul>
     <h2>Listening to</h2>
     <div class="spotify">
-        <h3>Connect Spotify</h3>
         <img alt="Spotify" src="spotify.webp">
+        <h3>Connect Spotify</h3>
     </div>
 </div>
 <div class="body">
-    <h2>Recent Activity</h2>
-    <img alt="post" src="Phoebe.jpeg"
-    width="500"
-    height="400">
+    <h1>Recent Activity</h1>
+    <img alt="post" src="Phoebe.jpeg">
+    <h2>4/20/25   4:20pm</h2>
+    <div class="pic">
+    <img alt="me" src="A3522818-BB49-4456-8FEA-70314EBE07C9_4_5005_c.jpeg">
+    <h3>@Camdyn Reiss: Yo why tf is my cat so ugly lol</h3>
+</div>
 </div>
 </body>
 </html>
